Build for all supported Torch configurations
Use ABI3 to avoid multiplying by the number of Python versions.

--- a/lib/torch-extension/CMakeLists.txt
+++ b/lib/torch-extension/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.13)
 project(kernel LANGUAGES CXX CUDA)
 
-find_package(Python REQUIRED COMPONENTS Development)
+find_package(Python REQUIRED COMPONENTS Development Development.SABIModule)
 
 # Remove once we have the shim.
 find_package(Torch REQUIRED)
@@ -21,7 +21,7 @@ if(NOT DEFINED KERNEL_LIBRARIES)
   message(FATAL_ERROR "EXTENSION_SOURCES must be defined")
 endif()
 
-Python_add_library(${EXTENSION_NAME} MODULE "${SOURCE_FILES}")
+Python_add_library(${EXTENSION_NAME} USE_SABI 3 WITH_SOABI MODULE "${SOURCE_FILES}")
 target_compile_definitions(${EXTENSION_NAME} PRIVATE "-DTORCH_EXTENSION_NAME=${EXTENSION_NAME}")
 target_link_libraries(${EXTENSION_NAME} PRIVATE CUDA::cudart CUDA::cuda_driver)
 
