Filter source paths to avoid unnecessary rebuilds

--- a/lib/kernel/CMakeLists.txt
+++ b/lib/kernel/CMakeLists.txt
@@ -19,7 +19,9 @@ endif()
 add_library(${KERNEL_NAME} STATIC ${SOURCE_FILES})
 
 target_link_libraries(${KERNEL_NAME} PRIVATE ${TORCH_LIBRARIES})
-set_target_properties(${KERNEL_NAME} PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+set_target_properties(${EXTENSION_NAME} PROPERTIES
+  CUDA_RESOLVE_DEVICE_SYMBOLS ON
+  LINKER_LANGUAGE CXX)
 
 install(TARGETS ${KERNEL_NAME} ARCHIVE COMPONENT Development DESTINATION lib)
 
