--- a/lib/torch-extension/CMakeLists.txt
+++ b/lib/torch-extension/CMakeLists.txt
@@ -27,7 +27,9 @@ target_link_libraries(${EXTENSION_NAME} PRIVATE CUDA::cudart CUDA::cuda_driver)
 
 target_link_libraries(${EXTENSION_NAME} PRIVATE torch torch_python)
 target_link_libraries(${EXTENSION_NAME} PRIVATE ${KERNEL_LIBRARIES})
-set_target_properties(${EXTENSION_NAME} PROPERTIES CUDA_RESOLVE_DEVICE_SYMBOLS ON)
+set_target_properties(${EXTENSION_NAME} PROPERTIES
+  CUDA_RESOLVE_DEVICE_SYMBOLS ON
+  LINKER_LANGUAGE CXX)
 
 install(TARGETS ${EXTENSION_NAME} LIBRARY COMPONENT ${EXTENSION_NAME} DESTINATION lib)
 
