Fix CMake source file passthrough

--- a/lib/kernel/CMakeLists.txt
+++ b/lib/kernel/CMakeLists.txt
@@ -20,8 +20,7 @@ add_library(${KERNEL_NAME} STATIC ${SOURCE_FILES})
 
 target_link_libraries(${KERNEL_NAME} PRIVATE ${TORCH_LIBRARIES})
 set_target_properties(${EXTENSION_NAME} PROPERTIES
-  CUDA_RESOLVE_DEVICE_SYMBOLS ON
-  LINKER_LANGUAGE CXX)
+  CUDA_RESOLVE_DEVICE_SYMBOLS ON)
 
 install(TARGETS ${KERNEL_NAME} ARCHIVE COMPONENT Development DESTINATION lib)
 
