--- a/lib/torch-extension/CMakeLists.txt
+++ b/lib/torch-extension/CMakeLists.txt
@@ -28,8 +28,7 @@ target_link_libraries(${EXTENSION_NAME} PRIVATE CUDA::cudart CUDA::cuda_driver)
 target_link_libraries(${EXTENSION_NAME} PRIVATE torch torch_python)
 target_link_libraries(${EXTENSION_NAME} PRIVATE ${KERNEL_LIBRARIES})
 set_target_properties(${EXTENSION_NAME} PROPERTIES
-  CUDA_RESOLVE_DEVICE_SYMBOLS ON
-  LINKER_LANGUAGE CXX)
+  CUDA_RESOLVE_DEVICE_SYMBOLS ON)
 
 install(TARGETS ${EXTENSION_NAME} LIBRARY COMPONENT ${EXTENSION_NAME} DESTINATION lib)
 
