Allow adding Python files to the Torch extension
Fixes #7.

--- a/lib/torch-extension/CMakeLists.txt
+++ b/lib/torch-extension/CMakeLists.txt
@@ -21,14 +21,16 @@ if(NOT DEFINED KERNEL_LIBRARIES)
   message(FATAL_ERROR "EXTENSION_SOURCES must be defined")
 endif()
 
-Python_add_library(${EXTENSION_NAME} USE_SABI 3 WITH_SOABI MODULE "${SOURCE_FILES}")
-target_compile_definitions(${EXTENSION_NAME} PRIVATE "-DTORCH_EXTENSION_NAME=${EXTENSION_NAME}")
-target_link_libraries(${EXTENSION_NAME} PRIVATE CUDA::cudart CUDA::cuda_driver)
+set(C_EXTENSION "_${EXTENSION_NAME}")
 
-target_link_libraries(${EXTENSION_NAME} PRIVATE torch torch_python)
-target_link_libraries(${EXTENSION_NAME} PRIVATE ${KERNEL_LIBRARIES})
-set_target_properties(${EXTENSION_NAME} PROPERTIES
+Python_add_library(${C_EXTENSION} USE_SABI 3 WITH_SOABI MODULE "${SOURCE_FILES}")
+target_compile_definitions(${C_EXTENSION} PRIVATE "-DTORCH_EXTENSION_NAME=${C_EXTENSION}")
+target_link_libraries(${C_EXTENSION} PRIVATE CUDA::cudart CUDA::cuda_driver)
+
+target_link_libraries(${C_EXTENSION} PRIVATE torch torch_python)
+target_link_libraries(${C_EXTENSION} PRIVATE ${KERNEL_LIBRARIES})
+set_target_properties(${C_EXTENSION} PROPERTIES
   CUDA_RESOLVE_DEVICE_SYMBOLS ON)
 
-install(TARGETS ${EXTENSION_NAME} LIBRARY COMPONENT ${EXTENSION_NAME} DESTINATION lib)
+install(TARGETS ${C_EXTENSION} LIBRARY COMPONENT ${C_EXTENSION} DESTINATION ${EXTENSION_NAME})
 
