Make version part of the ops name
This allows us to load multiple versions of the same kernels.

--- a/lib/torch-extension/CMakeLists.txt
+++ b/lib/torch-extension/CMakeLists.txt
@@ -10,6 +10,9 @@ if(NOT DEFINED EXTENSION_NAME)
   message(FATAL_ERROR "EXTENSION_NAME must be defined")
 endif()
 
+if(NOT DEFINED EXTENSION_DEST)
+  message(FATAL_ERROR "EXTENSION_DEST must be defined")
+endif()
 
 if(DEFINED EXTENSION_SOURCES)
   set(SOURCE_FILES ${EXTENSION_SOURCES})
@@ -18,19 +21,17 @@ else()
 endif()
 
 if(NOT DEFINED KERNEL_LIBRARIES)
-  message(FATAL_ERROR "EXTENSION_SOURCES must be defined")
+  message(FATAL_ERROR "KERNEL_LIBRARIES must be defined")
 endif()
 
-set(C_EXTENSION "_${EXTENSION_NAME}")
+Python_add_library(${EXTENSION_NAME} USE_SABI 3 WITH_SOABI MODULE "${SOURCE_FILES}")
+target_compile_definitions(${EXTENSION_NAME} PRIVATE "-DTORCH_EXTENSION_NAME=${EXTENSION_NAME}")
+target_link_libraries(${EXTENSION_NAME} PRIVATE CUDA::cudart CUDA::cuda_driver)
 
-Python_add_library(${C_EXTENSION} USE_SABI 3 WITH_SOABI MODULE "${SOURCE_FILES}")
-target_compile_definitions(${C_EXTENSION} PRIVATE "-DTORCH_EXTENSION_NAME=${C_EXTENSION}")
-target_link_libraries(${C_EXTENSION} PRIVATE CUDA::cudart CUDA::cuda_driver)
-
-target_link_libraries(${C_EXTENSION} PRIVATE torch torch_python)
-target_link_libraries(${C_EXTENSION} PRIVATE ${KERNEL_LIBRARIES})
-set_target_properties(${C_EXTENSION} PROPERTIES
+target_link_libraries(${EXTENSION_NAME} PRIVATE torch torch_python)
+target_link_libraries(${EXTENSION_NAME} PRIVATE ${KERNEL_LIBRARIES})
+set_target_properties(${EXTENSION_NAME} PROPERTIES
   CUDA_RESOLVE_DEVICE_SYMBOLS ON)
 
-install(TARGETS ${C_EXTENSION} LIBRARY COMPONENT ${C_EXTENSION} DESTINATION ${EXTENSION_NAME})
+install(TARGETS ${EXTENSION_NAME} LIBRARY COMPONENT ${EXTENSION_NAME} DESTINATION ${EXTENSION_DEST})
 
