Add support for old Linux distributions (#33)
Build against glibc 2.27 and libstdc++ 8 to support old Linux
distributions (tested Ubuntu 18.04 and later).

--- a/lib/kernel/CMakeLists.txt
+++ b/lib/kernel/CMakeLists.txt
@@ -26,6 +26,8 @@ add_library(${KERNEL_NAME} STATIC ${SOURCE_FILES})
 target_compile_options(${KERNEL_NAME} PRIVATE
   $<$<COMPILE_LANGUAGE:CUDA>:${GPU_COMPILE_FLAGS}>)
 
+target_compile_features(${KERNEL_NAME} PRIVATE cxx_std_17)
+
 target_link_libraries(${KERNEL_NAME} PRIVATE ${TORCH_LIBRARIES})
 set_target_properties(${EXTENSION_NAME} PROPERTIES
   CUDA_RESOLVE_DEVICE_SYMBOLS ON)
