Use random material to generate unique ops names (#48)
Using version numbers is probably not safe, because a kernel developer
might push a new revision without bumping the version number.

--- a/toml2cmake/Cargo.toml
+++ b/toml2cmake/Cargo.toml
@@ -4,11 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+base32 = "0.5"
 clap = { version = "4", features = ["derive"] }
 eyre = "0.6.12"
 itertools = "0.13"
 minijinja = "2.5"
 minijinja-embed = "2.5"
+rand = "0.8"
 serde = { version = "1", features = ["derive"] }
 toml = "0.8"
 
