--- a/.github/workflows/build_kernel.yaml
+++ b/.github/workflows/build_kernel.yaml
@@ -23,10 +23,15 @@ jobs:
           authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
         env:
           USER: github_runner
-      - name: Build
+      - name: Build activation kernel
         run: ( cd examples/activation && nix build .\#redistributable.torch25-cxx98-cu121-x86_64-linux )
-      - name: Copy kernel
-        run: cp -rL examples/activation/result kernel
+      - name: Copy activation kernel
+        run: cp -rL examples/activation/result activation-kernel
+
+      - name: Build cutlass GEMM kernel
+        run: ( cd examples/cutlass-gemm && nix build .\#redistributable.torch25-cxx98-cu121-x86_64-linux )
+      - name: Copy cutlass GEMM kernel
+        run: cp -rL examples/cutlass-gemm/result cutlass-gemm-kernel
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
