Small quality of life improvements (#65)
* Make `torch-ext` the mandatory name for the Torch binding directory.
* Remove the `pyroot` option.
* Move `name` to the `general` section.
* Generate `torch-ext/registration.h` in `toml2cmake`.
* Remove `general.version`, since it is unused.
* Rename `capabilities` to `cuda-capabilities`.

--- a/examples/activation/build.toml
+++ b/examples/activation/build.toml
@@ -1,17 +1,14 @@
 [general]
-version = "0.0.1"
+name = "activation"
 
 [torch]
-name = "activation"
 src = [
-  "ext-torch/registration.h",
-  "ext-torch/torch_binding.cpp",
-  "ext-torch/torch_binding.h"
+  "torch-ext/torch_binding.cpp",
+  "torch-ext/torch_binding.h"
 ]
-pyroot = "ext-torch"
 
 [kernel.activation]
-capabilities = [ "7.0", "7.2", "7.5", "8.0", "8.6", "8.7", "8.9", "9.0" ]
+cuda-capabilities = [ "7.0", "7.2", "7.5", "8.0", "8.6", "8.7", "8.9", "9.0" ]
 src = [
   "activation/activation_kernels.cu",
   "activation/cuda_compat.h",
