Add ReLU example and use it in the docs (#69)
ReLU is one of the simplest kernels, so add it as a minimal example.
Then also use it in the writing-kernels doc as a running example.

--- a/.github/workflows/build_kernel.yaml
+++ b/.github/workflows/build_kernel.yaml
@@ -33,6 +33,11 @@ jobs:
       - name: Copy cutlass GEMM kernel
         run: cp -rL examples/cutlass-gemm/result cutlass-gemm-kernel
 
+      - name: Build relu kernel
+        run: ( cd examples/relu && nix build .\#redistributable.torch25-cxx98-cu121-x86_64-linux )
+      - name: Copy relu kernel
+        run: cp -rL examples/relu/result relu-kernel
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Build Docker image
