--- a/build2cmake/Cargo.toml
+++ b/build2cmake/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
-name = "toml2cmake"
+name = "build2cmake"
 version = "0.1.0"
 edition = "2021"
+description = "Generate CMake files for kernel-builder projects"
+homepage = "https://github.com/huggingface/kernel-builder"
+license = "Apache-2.0"
+documentation = "https://docs.rs/build2cmake"
+repository = "https://github.com/huggingface/kernel-builder"
 
 [dependencies]
 base32 = "0.5"
