--- a/kernel-abi-check/Cargo.toml
+++ b/kernel-abi-check/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kernel-abi-check"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 description = "Check the ABI of Hub Kernels"
 homepage = "https://github.com/huggingface/kernel-builder"
@@ -15,4 +15,8 @@ color-eyre = "0.6"
 eyre = "0.6"
 itertools = "0.14.0"
 object = "0.36.7"
+once_cell = "1"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+toml = "0.8"
 
