--- a/build2cmake/Cargo.toml
+++ b/build2cmake/Cargo.toml
@@ -17,6 +17,7 @@ minijinja = "2.5"
 minijinja-embed = "2.5"
 rand = "0.8"
 serde = { version = "1", features = ["derive"] }
+serde_json = "1"
 toml = "0.8"
 
 [build-dependencies]
