--- a/.github/workflows/build_kernel.yaml
+++ b/.github/workflows/build_kernel.yaml
@@ -38,6 +38,11 @@ jobs:
       - name: Copy relu kernel
         run: cp -rL examples/relu/result relu-kernel
 
+      - name: Build silu-and-mul-universal kernel
+        run: ( cd examples/silu-and-mul-universal && nix build .\#redistributable.torch25-cxx98-cu121-x86_64-linux )
+      - name: Copy silu-and-mul-universal kernel
+        run: cp -rL examples/silu-and-mul-universal/result silu-and-mul-universal-kernel
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Build Docker image
