Add a CUDA 12.9 build variant for Torch 2.7 (#136)
This change adds a CUDA 12.9 build variant. Since this is not a variant
supported/distributed by upstream, we add an `upstreamVariant` attribute
to the Torch variants. A variant is only a candidate for a kernel's
`bundle` package when `upstreamVariant = true`.

Todo: also use `upstreamVariant` in generating variant JSON.

--- a/.github/workflows/check_variants.yaml
+++ b/.github/workflows/check_variants.yaml
@@ -17,22 +17,22 @@ jobs:
         with:
           nix_path: nixpkgs=channel:nixos-unstable
       - name: Generate variants JSON
-        run: nix eval --raw .#lib.allBuildVariantsJSON | nix run nixpkgs#jq > build-variants.json
+        run: nix eval --raw .#lib.allBuildVariantsJSON | nix run nixpkgs#jq 'walk(if type == "array" then sort else . end)' > build-variants.json
       - name: Check if variants JSON is up-to-date
         run: |
           if git diff --exit-code build-variants.json; then
             echo "✅ variants.json is up-to-date"
           else
-            echo "🛑 regenerate variants.json: nix eval --raw .#lib.allBuildVariantsJSON | nix run nixpkgs#jq > build-variants.json"
+            echo "🛑 regenerate variants.json: nix eval --raw .#lib.allBuildVariantsJSON | nix run nixpkgs#jq 'walk(if type == "array" then sort else . end)' > build-variants.json"
             exit 1
           fi
       - name: Generate variants Markdown
-        run: scripts/gen_variants_markdown.py
+        run: nix run nixpkgs#python3 scripts/gen_variants_markdown.py
       - name: Check if variants Markdown is up-to-date
         run: |
           if git diff --exit-code docs/build-variants.md; then
             echo "✅ docs/build-variants.md is up-to-date"
           else
-            echo "🛑 regenerate docs/build-variants: scripts/gen_variants_markdown.py"
+            echo "🛑 regenerate docs/build-variants: nix run nixpkgs#python3 scripts/gen_variants_markdown.py"
             exit 1
           fi
