build2cmake: attempt to get shorthash-based ops id using git (#137)
If no identifier is passed to build2cmake, attempt to get it from the
git repo the kernel is in. Only use a random identifier when this fails.

--- a/build2cmake/Cargo.toml
+++ b/build2cmake/Cargo.toml
@@ -12,6 +12,7 @@ repository = "https://github.com/huggingface/kernel-builder"
 base32 = "0.5"
 clap = { version = "4", features = ["derive"] }
 eyre = "0.6.12"
+git2 = "0.20"
 itertools = "0.13"
 minijinja = "2.5"
 minijinja-embed = "2.5"
