Switch to the to-be hf-nix repo (#141)

--- a/.github/workflows/nix_fmt.yaml
+++ b/.github/workflows/nix_fmt.yaml
@@ -17,4 +17,4 @@ jobs:
         with:
           nix_path: nixpkgs=channel:nixos-unstable
       - name: Check formatting
-        run: nix fmt -- -c ./
+        run: nix fmt -- --ci
