Update the build.toml format in preparation for Metal (#144)
Changes:

* `kernel.<name>.language` is removed.
* `kernel.<name>.backend` is added and is one of `cuda` or `rocm`.
* `torch.universal` is renamed to `general.universal`.
* `.cu` files in kernels with the `rocm` backend are hipified.

`build2toml` still parses the old format and adds a new `update-build`
subcommand to upgrade a `build.toml`. The Nix tooling does not support
the old format, but will suggest to run `build2toml update-build`.

--- a/examples/cutlass-gemm/build.toml
+++ b/examples/cutlass-gemm/build.toml
@@ -1,14 +1,17 @@
 [general]
 name = "cutlass_gemm"
+universal = false
 
 [torch]
 src = [
-  "torch-ext/torch_binding.cpp",
-  "torch-ext/torch_binding.h"
+    "torch-ext/torch_binding.cpp",
+    "torch-ext/torch_binding.h",
 ]
 
 [kernel.gemm]
-src = [
-  "gemm.cu",
+backend = "cuda"
+depends = [
+    "torch",
+    "cutlass_3_6",
 ]
-depends = [ "torch", "cutlass_3_6" ]
+src = ["gemm.cu"]
