--- a/examples/relu/build.toml
+++ b/examples/relu/build.toml
@@ -1,16 +1,30 @@
 [general]
 name = "relu"
+universal = false
 
 [torch]
 src = [
-  "torch-ext/torch_binding.cpp",
-  "torch-ext/torch_binding.h"
+    "torch-ext/torch_binding.cpp",
+    "torch-ext/torch_binding.h",
 ]
 
 [kernel.activation]
-language = "cuda-hipify"
-rocm-archs = [ "gfx906", "gfx908", "gfx90a", "gfx940", "gfx941", "gfx942", "gfx1030", "gfx1100", "gfx1101" ]
-src = [
-  "relu_kernel/relu.cu",
+backend = "cuda"
+depends = ["torch"]
+src = ["relu_kernel/relu.cu"]
+
+[kernel.activation_rocm]
+backend = "rocm"
+rocm-archs = [
+    "gfx906",
+    "gfx908",
+    "gfx90a",
+    "gfx940",
+    "gfx941",
+    "gfx942",
+    "gfx1030",
+    "gfx1100",
+    "gfx1101",
 ]
-depends = [ "torch" ]
+depends = ["torch"]
+src = ["relu_kernel/relu.cu"]
