--- a/.github/workflows/docker-build-push.yaml
+++ b/.github/workflows/docker-build-push.yaml
@@ -7,6 +7,7 @@ on:
     paths:
       # Only run on changes to the Dockerfile or workflow file
       - "Dockerfile"
+      - "dockerfiles/**"
       - ".github/workflows/docker-build-push.yaml"
   workflow_dispatch: # Allow manual triggering
 
@@ -15,8 +16,8 @@ env:
   IMAGE_NAME: ${{ github.repository_owner }}/kernel-builder
 
 jobs:
-  build-and-push:
-    name: Build and Push Docker Image
+  build-and-push-user:
+    name: Build and Push User Docker Image
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -43,6 +44,53 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
+            type=sha,prefix=user-,format=short
+            type=ref,prefix=user-,event=branch
+            type=semver,prefix=user-,pattern={{version}}
+            type=semver,prefix=user-,pattern={{major}}.{{minor}}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./dockerfiles/Dockerfile.user
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            MAX_JOBS=8
+            CORES=8
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  build-and-push-root:
+    name: Build and Push Root Docker Image
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta-root
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=raw,value=root,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
             type=sha,format=short
             type=ref,event=branch
             type=semver,pattern={{version}}
@@ -52,11 +100,12 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
+          file: ./dockerfiles/Dockerfile
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.meta-root.outputs.tags }}
+          labels: ${{ steps.meta-root.outputs.labels }}
           build-args: |
             MAX_JOBS=8
             CORES=8
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: type=gha,scope=root
+          cache-to: type=gha,mode=max,scope=root
