feat: allow precompilation for metal kernels (#152)
This PR allows precompilation of metal kernels to enable greater
flexibility. This compiles all `.metal` and `.h` files into a
`.metallib` and then link to it when compiling the `.mm` torch interop
code.

I updated the relu metal example to show both the `.metal` and `.h`
files being used.

Example (for the relu example):
```
[general]
name = "relu"
universal = false

[torch]
src = [
    "torch-ext/torch_binding.cpp",
    "torch-ext/torch_binding.h",
]

[kernel.activation_metal]
backend = "metal"
src = [
  "relu_metal/relu.mm",
  "relu_metal/relu.metal",
]
depends = [ "torch" ]
```

---------

Co-authored-by: Daniël de Kok <me@danieldk.eu>

--- a/examples/relu/build.toml
+++ b/examples/relu/build.toml
@@ -17,6 +17,8 @@ src = ["relu_cuda/relu.cu"]
 backend = "metal"
 src = [
   "relu_metal/relu.mm",
+  "relu_metal/relu.metal",
+  "relu_metal/common.h",
 ]
 depends = [ "torch" ]
 
