Dockerfile improve local path (#166)

--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -8,17 +8,16 @@ ARG CORES=4
 RUN echo "experimental-features = nix-command flakes" >> /etc/nix/nix.conf \
     && echo "max-jobs = $MAX_JOBS" >> /etc/nix/nix.conf \
     && echo "cores = $CORES" >> /etc/nix/nix.conf \
-    && nix profile install nixpkgs#cachix nixpkgs#git-lfs \
+    && nix profile install nixpkgs#cachix nixpkgs#git-lfs nixpkgs#jq \
     && cachix use huggingface
-WORKDIR /app
-# Copy builder files
-COPY . /etc/kernel-builder/
+# Copy external files
+COPY . /etc/src/
 # Set environment variables
 ENV MAX_JOBS=${MAX_JOBS}
 ENV CORES=${CORES}
 # Create directory and setup script
-RUN mkdir -p /etc/kernel-builder && \
-    cat <<'EOF' > /etc/kernel-builder/cli.sh
+RUN mkdir -p /etc/src && \
+    cat <<'EOF' > /etc/src/cli.sh
 #!/bin/sh
 set -e
 # Default values
@@ -100,11 +99,27 @@ function build_extension {
 
   # Make sure the build is up to date
   nix run github:huggingface/kernel-builder#update-build -- build.toml
-  
-  # Pure bundle build
+
+  # only do the following if flake.lock exists
+
+  # if the lock file exists
+  override=""
+  if [ -f flake.lock ]; then
+    # check the type of kernel-builder in flake.lock
+    kernel_url_type=$(cat flake.lock | jq -r '.nodes["kernel-builder"].locked.type')
+    echo "Kernel URL type: $kernel_url_type"
+
+    # If the type is "path", compute the nar hash and set override
+    if [ "$kernel_url_type" = "path" ]; then
+      kernel_url_path=$(cat flake.lock | jq -r '.nodes["kernel-builder"].locked.path')
+      nar_hash=$(nix-hash --type sha256 --base64 "$kernel_url_path")
+      override="--override-input kernel-builder path:../..?narHash=sha256-$nar_hash"
+    fi
+  fi
+
   echo "Building with Nix..."
-  nix build \
-    . \
+  nix build . \
+    $override \
     --max-jobs $MAX_JOBS \
     -j $CORES \
     -L
@@ -179,8 +194,36 @@ done
 # Execute the command
 case $COMMAND in
   build)
+
+    # First check if the working directory was set by the cli
+    # if it is == "/" then we assume the user did not explictly set it
+    if [ "$(pwd)" = "/" ]; then
+      # set the working dir as /etc/src
+      cd /etc/src
+
+      echo "No working directory set, defaulting to /etc/src"
+    fi
+
+    # In the case only a volume is mounted, use that as the source, and in the 
+    # case a working directory is set we should be in the correct directory by now
+    # get the current directory as the source directory
+    SRC_DIR=$(pwd)
+
+    # Add a /build to the source directory
+    BUILD_DIR="${SRC_DIR}/build"
+
+    # Ensure the build directory exists
+    mkdir -p "${BUILD_DIR}"
+
+    # Log the directories being used to user
+    echo "Building from source directory: ${SRC_DIR}"
+    echo "Output will be placed in: ${BUILD_DIR}"
+
+    # dump the top of the ls
+    ls -la "${SRC_DIR}" | head -20
+
     # When building existing code, use the mounted directory
-    build_extension "/kernelcode" "/kernelcode/build"
+    build_extension "${SRC_DIR}" "${BUILD_DIR}"
     ;;
   dev)
     start_dev_shell
@@ -198,10 +241,10 @@ case $COMMAND in
     ;;
 esac
 EOF
-RUN chmod +x /etc/kernel-builder/cli.sh
-# Create output directory structure
-RUN mkdir -p /kernelcode/build
-# Set up volume for kernelcode
-VOLUME /kernelcode
+RUN chmod +x /etc/src/cli.sh
+# # Create output directory structure
+# RUN mkdir -p /kernelcode/build
+# # Set up volume for kernelcode
+# VOLUME /kernelcode
 
-ENTRYPOINT ["/etc/kernel-builder/cli.sh"]
+ENTRYPOINT ["/etc/src/cli.sh"]
