--- a/examples/relu/build.toml
+++ b/examples/relu/build.toml
@@ -37,3 +37,8 @@ rocm-archs = [
 ]
 depends = ["torch"]
 src = ["relu_cuda/relu.cu"]
+
+[kernel.activation_xpu]
+backend = "xpu"
+depends = ["torch"]
+src = ["relu_xpu/relu.cpp"]
