Disable cachix pushes, sandboxing is not enabled (#198)

--- a/.github/workflows/build_kernel.yaml
+++ b/.github/workflows/build_kernel.yaml
@@ -20,7 +20,7 @@ jobs:
       - uses: cachix/cachix-action@v14
         with:
           name: huggingface
-          authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
+          #authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
         env:
           USER: github_runner
       - name: Build activation kernel
