--- a/.github/workflows/build_kernel_macos.yaml
+++ b/.github/workflows/build_kernel_macos.yaml
@@ -17,7 +17,7 @@ jobs:
       - uses: cachix/cachix-action@v15
         with:
           name: huggingface
-          authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
+          #authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
       # For now we only test that there are no regressions in building macOS
       # kernels. Also run tests once we have a macOS runner.
       - name: Build relu kernel
