--- a/.github/workflows/build_kernel_rocm.yaml
+++ b/.github/workflows/build_kernel_rocm.yaml
@@ -20,7 +20,7 @@ jobs:
       - uses: cachix/cachix-action@v14
         with:
           name: huggingface
-          authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
+          #authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
         env:
           USER: github_runner
       # For now we only test that there are no regressions in building ROCm
