--- a/.github/workflows/build_kernel.yaml
+++ b/.github/workflows/build_kernel.yaml
@@ -38,6 +38,11 @@ jobs:
       - name: Copy relu kernel
         run: cp -rL examples/relu/result relu-kernel
 
+      - name: Build relu-backprop-compile kernel
+        run: ( cd examples/relu-backprop-compile && nix build .\#redistributable.torch27-cxx11-cu126-x86_64-linux )
+      - name: Copy relu-backprop-compile kernel
+        run: cp -rL examples/relu-backprop-compile/result relu-backprop-compile-kernel
+
       # Just test that we build with the extra torchVersions argument.
       - name: Build relu kernel (specific Torch version)
         run: ( cd examples/relu-specific-torch && nix build . )
