add sycl cutlass build and example
Signed-off-by: Wang, Yi A <yi.a.wang@intel.com>

--- a/examples/cutlass-gemm/build.toml
+++ b/examples/cutlass-gemm/build.toml
@@ -15,3 +15,12 @@ depends = [
     "cutlass_3_6",
 ]
 src = ["gemm.cu"]
+
+[kernel.gemm_xpu]
+backend = "xpu"
+depends = [
+    "torch",
+    "cutlass_sycl",
+]
+src = ["gemm_sycl.cpp"]
+
