Add kernel-abi-check-python release workflow (#228)

--- a/build2cmake/Cargo.toml
+++ b/build2cmake/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "build2cmake"
-version = "0.6.1"
+version = "0.6.2-dev0"
 edition = "2021"
 description = "Generate CMake files for kernel-builder projects"
 homepage = "https://github.com/huggingface/kernel-builder"
