--- a/kernel-abi-check/bindings/python/Cargo.toml
+++ b/kernel-abi-check/bindings/python/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kernel-abi-check-python"
-version = "0.1.0"
+version = "0.6.2-dev0"
 edition = "2024"
 description = "Check the ABI of Hub Kernels"
 homepage = "https://github.com/huggingface/kernel-builder"
