--- a/kernel-abi-check/kernel-abi-check/Cargo.toml
+++ b/kernel-abi-check/kernel-abi-check/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "kernel-abi-check"
-version = "0.6.1"
+version = "0.6.2-dev0"
 edition = "2021"
 description = "Check the ABI of Hub Kernels"
 homepage = "https://github.com/huggingface/kernel-builder"
