Add `cutlass_4_0` as a dependency (#229)

--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -9,6 +9,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: dtolnay/rust-toolchain@stable
+        with:
+          components: rustfmt
       - name: Cargo fmt (kernel-abi-check)
         run: |
           ( cd kernel-abi-check/kernel-abi-check && cargo fmt --all -- --check )
