Use binary wheels for Torch (#252)

--- a/tests/Dockerfile.test-kernel
+++ b/tests/Dockerfile.test-kernel
@@ -1,11 +1,11 @@
 # syntax=docker/dockerfile:1.4
 ARG PYTHON_VERSION=3.10
 # Ideally we'd test with 11.8, but the GELU kernel is subtly off.
-ARG CUDA_VERSION=12.1.0
-ARG UBUNTU_VERSION=18.04
-ARG TORCH_VERSION=2.5.0
+ARG CUDA_VERSION=12.6.0
+ARG UBI_VERSION=8
+ARG TORCH_VERSION=2.9.0
 
-FROM nvidia/cuda:${CUDA_VERSION}-devel-ubuntu${UBUNTU_VERSION} as base
+FROM nvidia/cuda:${CUDA_VERSION}-devel-ubi${UBI_VERSION} as base
 
 # Set environment variables
 ENV DEBIAN_FRONTEND=noninteractive \
@@ -15,11 +15,8 @@ ENV DEBIAN_FRONTEND=noninteractive \
     NVIDIA_DRIVER_CAPABILITIES=compute,utility
 
 # Install system dependencies
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    curl \
-    python3 \
-    python3-pip \
-    && rm -rf /var/lib/apt/lists/*
+RUN dnf install -y \
+    curl
 
 # Install uv package manager
 RUN curl -LsSf https://astral.sh/uv/install.sh | sh
@@ -47,10 +44,10 @@ WORKDIR /app/kernel-test
 
 RUN CUDA_MAJOR_MINOR=$(echo ${CUDA_VERSION} | cut -d'.' -f1,2) && \
     case ${CUDA_MAJOR_MINOR} in \
-    "11.8") CUDA_TAG="cu118" ;; \
-    "12.1") CUDA_TAG="cu121" ;; \
-    "12.2") CUDA_TAG="cu122" ;; \
     "12.4") CUDA_TAG="cu124" ;; \
+    "12.6") CUDA_TAG="cu126" ;; \
+    "12.8") CUDA_TAG="cu128" ;; \
+    "13.0") CUDA_TAG="cu130" ;; \
     *) CUDA_TAG="" ;; \
     esac && \
     if [ -n "${CUDA_TAG}" ]; then \
