feat: Add support for ROCm/HIP flags (#262)
Also fixes a small typo. Tested locally (just the build) with flags from
the [Clang
docs](https://clang.llvm.org/docs/ClangCommandLineReference.html#hip-options).

If you'd like me to add the `build.toml` config that was used for
testing, let me know.

---------

Co-authored-by: Daniël de Kok <me@danieldk.eu>

--- a/.github/workflows/build_kernel_rocm.yaml
+++ b/.github/workflows/build_kernel_rocm.yaml
@@ -27,3 +27,6 @@ jobs:
       # kernels. Also run tests once we have a ROCm runner.
       - name: Build relu kernel
         run: ( cd examples/relu && nix build .\#redistributable.torch29-cxx11-rocm63-x86_64-linux -L )
+
+      - name: Build relu kernel (compiler flags)
+        run: ( cd examples/relu-compiler-flags && nix build .\#redistributable.torch29-cxx11-rocm63-x86_64-linux )
