--- a/.github/workflows/test_extra_commands.yaml
+++ b/.github/workflows/test_extra_commands.yaml
@@ -10,18 +10,19 @@ on:
 jobs:
   build:
     name: Build kernel
-    runs-on:
-      group: aws-g6-12xlarge-plus
     steps:
       - uses: actions/checkout@v4
-      - uses: cachix/install-nix-action@v27
+      - uses: DeterminateSystems/nix-installer-action@main
         with:
-          nix_path: nixpkgs=channel:nixos-unstable
+          extra-conf: |
+            max-jobs = 4
+            cores = 12
+            sandbox-fallback = false
       - uses: cachix/cachix-action@v14
         with:
           name: huggingface
           #authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
         env:
-          USER: github_runner
+          USER: runner
       - name: Test nix run .#kernels
         run: ( cd examples/relu ; nix run .#kernels -- lock ../../tests/run-kernels )
