Remove examples/activation (#261)
This has become a standalone kernel in kernels-community. It also
precedes the relu example, which is much more minimal and easier to
understand.

--- a/examples/relu-backprop-compile/build.toml
+++ b/examples/relu-backprop-compile/build.toml
@@ -8,12 +8,12 @@ src = [
     "torch-ext/torch_binding.h",
 ]
 
-[kernel.activation]
+[kernel.relu]
 backend = "cuda"
 depends = ["torch"]
 src = ["relu_cuda/relu.cu"]
 
-[kernel.activation_rocm]
+[kernel.relu_rocm]
 backend = "rocm"
 rocm-archs = [
     "gfx906",
