--- a/examples/relu-specific-torch/build.toml
+++ b/examples/relu-specific-torch/build.toml
@@ -8,12 +8,12 @@ src = [
     "torch-ext/torch_binding.h",
 ]
 
-[kernel.activation]
+[kernel.relu]
 backend = "cuda"
 depends = ["torch"]
 src = ["relu_cuda/relu.cu"]
 
-[kernel.activation_rocm]
+[kernel.relu_rocm]
 backend = "rocm"
 rocm-archs = [
     "gfx906",
