--- a/tests/Dockerfile.test-kernel
+++ b/tests/Dockerfile.test-kernel
@@ -63,15 +63,15 @@ RUN CUDA_MAJOR_MINOR=$(echo ${CUDA_VERSION} | cut -d'.' -f1,2) && \
 RUN uv add numpy pytest
 
 # Copy kernels and tests
-COPY activation-kernel ./activation-kernel
+COPY relu-kernel ./relu-kernel
 COPY cutlass-gemm-kernel ./cutlass-gemm-kernel
 COPY silu-and-mul-universal-kernel ./silu-and-mul-universal-kernel
-COPY examples/activation/tests ./activation_tests
+COPY examples/relu/tests ./relu_tests
 COPY examples/cutlass-gemm/tests ./tests/cutlass_gemm_tests
 
 # Run tests
-ENV PYTHONPATH="activation-kernel:cutlass-gemm-kernel:silu-and-mul-universal-kernel:$PYTHONPATH"
-CMD ["/bin/sh", "-c", ".venv/bin/pytest", "activation_tests", "cutlass_gemm_tests"] 
+ENV PYTHONPATH="relu-kernel:cutlass-gemm-kernel:silu-and-mul-universal-kernel:$PYTHONPATH"
+CMD ["/bin/sh", "-c", ".venv/bin/pytest", "relu_tests", "cutlass_gemm_tests"] 
 
 # We only care about importing, the kernel is trivial.
 CMD ["/bin/sh", "-c", ".venv/bin/python", "-c", "'import silu_and_mul_universal'"] 
