--- a/.github/workflows/build_kernel.yaml
+++ b/.github/workflows/build_kernel.yaml
@@ -33,6 +33,11 @@ jobs:
       - name: Copy relu kernel
         run: cp -rL examples/relu/result relu-kernel
 
+      - name: Build relu kernel (CPU)
+        run: ( cd examples/relu && nix build .\#redistributable.torch29-cxx11-cpu-x86_64-linux )
+      - name: Copy relu kernel (CPU)
+        run: cp -rL examples/relu/result relu-kernel-cpu
+
       - name: Build cutlass GEMM kernel
         run: ( cd examples/cutlass-gemm && nix build .\#redistributable.torch29-cxx11-cu126-x86_64-linux )
       - name: Copy cutlass GEMM kernel
@@ -66,6 +71,7 @@ jobs:
             activation-kernel
             cutlass-gemm-kernel
             relu-kernel
+            relu-kernel-cpu
             relu-backprop-compile-kernel
             silu-and-mul-universal-kernel
 
