Update to macOS SDK 26 and Metal 4 (#290)
- Switch to macOS 26 as the minimum requirement and support Metal 4.
- The hf-nix bump also requires some CUDA fixes, primarily nvcc now
wraps gcc correctly in nixpkgs, so we have to pass gcc with our glibc
backwards compatibility.

---------

Co-authored-by: Mohamed Mekkouri <93391238+MekkCyber@users.noreply.github.com>

--- a/.github/workflows/build_kernel_macos.yaml
+++ b/.github/workflows/build_kernel_macos.yaml
@@ -10,8 +10,12 @@ on:
 jobs:
   build:
     name: Build kernel
-    runs-on: macos-latest
+    runs-on: macos-26
     steps:
+      - name: "Select Xcode"
+        run: sudo xcrun xcode-select -s /Applications/Xcode_26.0.app
+      - name: "Install Metal Toolchain"
+        run: xcodebuild -downloadComponent metalToolchain
       - uses: actions/checkout@v4
       - uses: cachix/install-nix-action@v31
       - uses: cachix/cachix-action@v15
