feat: support metal cpp (#295)
This PR supersedes
https://github.com/huggingface/kernel-builder/pull/291

---

This PR adds support for a new `metal-cpp` kernel dependency. This is a
follow up to the metal-cpp support in hf nix:
https://github.com/huggingface/hf-nix/pull/128 and enables kernels to
use the cpp headers to drive metal kernels.

Changes:
- adds dep to build2cmake
- adds new relu-metal-cpp example
- builds example in CI


example usage

```bash
cd examples/relu-metal-cpp
nix build -L .
cd ...
uv run test_relu_metal_cpp.py
```

`test_relu_metal_cpp.py`
```python
# /// script
# requires-python = ">=3.10"
# dependencies = ["kernels", "torch", "numpy"]
# ///
from kernels import get_local_kernel
import torch
from pathlib import Path

relu = get_local_kernel(Path("examples/relu-metal-cpp/result"), "relu").relu

input = torch.tensor([-1.0, -1.5, 0.0, 2.0, 3.5], device="mps", dtype=torch.float16)
out = relu(input)
ref = torch.relu(input)

assert torch.allclose(out, ref), f"Float16 failed: {out} != {ref}"

print(out.cpu().numpy())
print(ref.cpu().numpy())

print("PASS")
```
output
```
[0.  0.  0.  2.  3.5]
[0.  0.  0.  2.  3.5]
PASS
```

--- a/.github/workflows/build_kernel_macos.yaml
+++ b/.github/workflows/build_kernel_macos.yaml
@@ -26,3 +26,6 @@ jobs:
       # kernels. Also run tests once we have a macOS runner.
       - name: Build relu kernel
         run: ( cd examples/relu && nix build .\#redistributable.torch29-metal-aarch64-darwin -L )
+      
+      - name: Build relu metal cpp kernel
+        run: ( cd examples/relu-metal-cpp && nix build .\#redistributable.torch29-metal-aarch64-darwin -L )
