--- a/build2cmake/src/templates/universal/pyproject.toml
+++ b/build2cmake/src/templates/universal/pyproject.toml
@@ -2,7 +2,10 @@
 name = "{{ name }}"
 version = "0.0.1"
 requires-python = ">= 3.9"
-dependencies = ["torch>=2.4"]
+dependencies = [
+  "torch>=2.8",
+  {{python_dependencies}}
+]
 
 [tool.setuptools]
 package-dir = { "" = "torch-ext" }
