fix(windows): force USE_CUDA/USE_ROCM definitions to ensure PyTorch guards are not bypassed (#303)
Should fix build errors like the one below because it is checking for[
`#if defined(_WIN32) && (defined(USE_CUDA) ||
defined(USE_ROCM))`](https://github.com/pytorch/pytorch/blob/main/torch/csrc/dynamo/compiled_autograd.h#L1110C1-L1110C64)
but `USE_CUDA` was not actually being set for various reasons.


```
C:/hostedtoolcache/windows/Python/3.11.9/x64/Lib/site-packages/torch/include\torch/csrc/dynamo/compiled_autograd.h(1134): error C2872: 'std': ambiguous symbol [D:\a\kernels-community\kernels-community\relu\build\_relu_5c0099e.vcxproj]
  C:/hostedtoolcache/windows/Python/3.11.9/x64/Lib/site-packages/torch/include\c10/util/strong_type.h(1583): note: could be 'std'
  C:/hostedtoolcache/windows/Python/3.11.9/x64/Lib/site-packages/torch/include\torch/csrc/dynamo/compiled_autograd.h(1134): note: or       'std'
  C:/hostedtoolcache/windows/Python/3.11.9/x64/Lib/site-packages/torch/include\torch/csrc/dynamo/compiled_autograd.h(1134): note: the template instantiation context (the oldest one first) is
  C:/hostedtoolcache/windows/Python/3.11.9/x64/Lib/site-packages/torch/include\torch/csrc/dynamo/compiled_autograd.h(1181): note: see reference to class template instantiation 'torch::dynamo::autograd::IValuePacker<__int64>' being compiled
  C:/hostedtoolcache/windows/Python/3.11.9/x64/Lib/site-packages/torch/include\torch/csrc/dynamo/compiled_autograd.h(1108): note: while compiling class template member function 'c10::TypePtr torch::dynamo::autograd::IValuePacker<__int64>::packed_type(void)'
  C:/hostedtoolcache/windows/Python/3.11.9/x64/Lib/site-packages/torch/include\torch/csrc/dynamo/compiled_autograd.h(1181): note: see the first reference to 'torch::dynamo::autograd::IValuePacker<__int64>::packed_type' in 'torch::dynamo::autograd::IValuePacker<unsigned __int64>::packed_type'
  ```

--- a/.github/workflows/build_kernel_windows.yaml
+++ b/.github/workflows/build_kernel_windows.yaml
@@ -12,9 +12,11 @@ jobs:
     strategy:
       matrix:
         os: [ windows-2022 ]
-        python: [ '3.12', '3.13' ]
+        python: [ 3.12 ]
         torch: [
-          { version: '2.8', cuda: '12.9.1', wheel: '129' }
+#          { version: '2.9.1', cuda: '12.6.3', wheel: '126' },
+          { version: '2.9.1', cuda: '12.8.1', wheel: '128' },
+#          { version: '2.9.1', cuda: '13.0.1', wheel: '130' }
         ]
 
     name: Build kernel
@@ -32,7 +34,7 @@ jobs:
       - uses: actions/checkout@v5
 
       # CUDA environment setup
-      - uses: N-Storm/cuda-toolkit@v0.2.28
+      - uses: Jimver/cuda-toolkit@v0.2.29
         id: setup-cuda-toolkit
         with:
           cuda: ${{ matrix.torch.cuda }}  # TODO(mfuntowicz): How can we test multiple CUDA versions than align with torch?
@@ -56,12 +58,7 @@ jobs:
           cache: 'pip'
 
       - name: Install PyTorch
-        run: pip install torch --index-url https://download.pytorch.org/whl/cu129
-
-      - name: Build activation kernel
-        run: ( scripts\windows\builder.ps1 -SourceFolder examples/activation -BuildConfig Release -Backend cuda -Build -Force )
-#      - name: Copy activation kernel
-#        run: cp -rL examples/activation/build activation-kernel
+        run: pip install torch --index-url https://download.pytorch.org/whl/cu${{ matrix.torch.wheel }}
 
       - name: Build cutlass GEMM kernel
         run: ( scripts\windows\builder.ps1 -SourceFolder examples/cutlass-gemm -BuildConfig Release -Backend cuda -Build -Force )
